// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FormRadioItem /> Validation states should render the correct snapshots 1`] = `
<div
  className="fd-form-item"
>
  <input
    className="fd-radio is-warning"
    id="foo"
    type="radio"
  />
  <label
    className="fd-form-label fd-radio__label"
    htmlFor="foo"
  >
    Option 1
  </label>
</div>
`;

exports[`<FormRadioItem /> Validation states should render the correct snapshots 2`] = `
<div
  className="fd-form-item"
>
  <input
    className="fd-radio is-error"
    id="foo"
    type="radio"
  />
  <label
    className="fd-form-label fd-radio__label"
    htmlFor="foo"
  >
    Option 1
  </label>
</div>
`;

exports[`<FormRadioItem /> Validation states should render the correct snapshots 3`] = `
<div
  className="fd-form-item"
>
  <input
    className="fd-radio is-success"
    id="foo"
    type="radio"
  />
  <label
    className="fd-form-label fd-radio__label"
    htmlFor="foo"
  >
    Option 1
  </label>
</div>
`;

exports[`<FormRadioItem /> Validation states should render the correct snapshots 4`] = `
<div
  className="fd-form-item"
>
  <input
    className="fd-radio is-information"
    id="foo"
    type="radio"
  />
  <label
    className="fd-form-label fd-radio__label"
    htmlFor="foo"
  >
    Option 1
  </label>
</div>
`;

exports[`<FormRadioItem /> create form radio item 1`] = `
<div
  className="fd-form-item"
>
  <input
    className="fd-radio"
    id="radio-1"
    name="radio-group-1"
    type="radio"
    value="radio-1"
  />
  <label
    className="fd-form-label fd-radio__label"
    htmlFor="radio-1"
  >
    Option 1
  </label>
</div>
`;
